# getharvest-backup

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
src/: backup-service.ts  config.ts  harvest-client.ts  index.ts  logger.ts  main.py
src/__tests__/: backup-service.test.ts  config.test.ts  harvest-client.test.ts  logger.test.ts
src/harvest_backup/: __init__.py  cli.py
src/harvest_backup/api/: __init__.py  accounts.py  client.py  endpoints.py  exceptions.py
src/harvest_backup/backup/: __init__.py  executor.py  writer.py
src/harvest_backup/models/: __init__.py  account.py
tests/: __init__.py  run_mock_backup.py  test_account_discovery.py  test_api_client.py  test_authentication_error.py  test_backup_executor.py  test_integration.py  test_pagination.py  test_writer.py
tests/fixtures/: mock_client.py  sample_responses.py
